[package]
name = "discrimination-tree"
description = "discrimination tree term indexing"
version = "0.3.0"
edition = "2021"
exclude = ["rustfmt.toml"]
authors = ["Michael Rawson <michael@rawsons.uk>"]
license = "MIT"
homepage = "https://github.com/MichaelRawson/discrimination-tree"
keywords = ["term", "index"]
readme = "README.md"
